# Simple_SDL2_App

./: .gitignore  CMakeLists.txt  SDL.h  SDLLib.h  main.c
cmake_modules/: FindSDL2TTF.cmake
lib/: Errors.h
lib/font/: Font.c  Font.h
lib/video/: Video.c  Video.h
