cmake_minimum_required(VERSION 3.28)
project(Simple_SDL2_App C)

Message("")
Message( STATUS "CMAKE_BINARY_DIR: " ${CMAKE_BINARY_DIR} )
Message( STATUS "CMAKE_SOURCE_DIR: " ${CMAKE_SOURCE_DIR} )
Message( STATUS "CMAKE_COMMAND: " ${CMAKE_COMMAND} )
Message( STATUS "CMAKE_VERSION: " ${CMAKE_VERSION} )
Message( STATUS "CMAKE_C_COMPILER: " ${CMAKE_C_COMPILER} )
Message( STATUS "CMAKE_PROJECT_NAME: " ${CMAKE_PROJECT_NAME} )
Message( STATUS "CMAKE_FINDCMAKE: " ${CMAKE_SOURCE_DIR}/CMAKE )

set(CMAKE_C_STANDARD 99)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(SOURCE_FILES
        lib/Errors.h
        lib/video/Video.h
        lib/video/Video.c
        lib/font/Font.h
        lib/font/Font.c
        main.c)

find_package(SDL2 REQUIRED)
Message( STATUS "FINDING SDL2" )
IF (${SDL2_FOUND})
    Message( STATUS "SDL2_FOUND: " ${SDL2_FOUND})
    Message( STATUS "SDL2_INCLUDE_DIR:" ${SDL2_INCLUDE_DIR})
    Message( STATUS "SDL2_LIBRARY: " ${SDL2_LIBRARIES})
ELSE()
    Message( STATUS "SDL2_FOUND: " ${SDL2_FOUND})
    Message( FATAL_ERROR "SDL2 NOT FOUND" )
ENDIF()

find_package(SDL2_TTF REQUIRED SDL2_ttf>=2.0.0)
Message( STATUS "FINDING SDL2_TTF" )
Message( STATUS "SDL2_TTF_FOUND: " ${SDL2_TTF_FOUND} )
IF (${SDL2_TTF_FOUND})
    Message( STATUS "SDL2_TTF_INCLUDE_DIR: " ${SDL2_TTF_INCLUDE_DIR})
    Message( STATUS "SDL2_TTF_LIBRARY: " ${SDL2_TTF_LIBRARIES})
ELSE()
    Message( FATAL_ERROR "SDL2_TTF NOT FOUND" )
ENDIF()

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR} ${SDL2_TTF_INCLUDE_DIR})
file(COPY resources DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

Message( STATUS "CMAKE_RUNTIME_OUTPUT_DIRECTORY: " ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} )

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2_TTF_LIBRARIES})
